# MailShake

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CHANGES.txt  CONTRIBUTING.md  LEGAL.md  LICENSE  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  mm.py  requirements-tests.txt  setup.cfg  setup.py  test_mail.py  tox.ini
.github/workflows/: run_tests.yml  upload-to-pypi.yml
docs/: README.md  mkdocs.yml
docs/docs/: amazon-ses-mailer.md  docs.md  index.html  message.md  smtp-mailer.md  to-console-mailer.md  to-memory-mailer.md
docs/docs/css/: colorful.css  fonts.css  index.css  monokai.css
docs/material/partials/: footer.html
mailshake/: __init__.py  _compat.py  compat.py  html2text.py  message.py  utils.py  version.py
mailshake/mailers/: amazon_ses.py  base.py  console.py  dummy.py  filebased.py  memory.py  smtp.py
shake_mail/: __init__.py
tests/: test_html2text.py  test_mailers.py  test_message.py  test_smtp_mailer.py
