[metadata]
name = mailshake
version= 1.191122
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
description = Dramatically simplify sending email from your python app.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/jpscaletti/mailshake
license = Apache License Version 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.6,<4.0
install_requires =
    html2text

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

dev =
    pytest
    pytest-cov
    flake8
    ipdb
    tox

[flake8]
max-complexity = 10
max-line-length = 88

statistics = true
doctests = True
accept-encodings = utf-8

select = C,E,F,W,B,B950
# W503 line break before binary operator
# E203 whitespace before ':'
# D100  Missing docstring in public module
# D101  Missing docstring in public class
# D102  Missing docstring in public method
# D103  Missing docstring in public function
# D104  Missing docstring in public package
# D105  Missing docstring in magic method
# D107  Missing docstring in __init__
ignore = W503,E203,D100,D101,D102,D103,D104,D105,D107

[tool:pytest]
addopts = --doctest-modules
