[metadata]
name = mailshake
version= 2.2
url = https://github.com/jpsca/mailshake
project_urls =
    Issue tracker = https://github.com/jpsca/mailshake/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0
license_file = LICENSE
description = Dramatically simplify sending email from your python app.
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
python_requires = >=3.6,<4.0
install_requires =
    html2text

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    flake8
    pytest
    pytest-cov

dev =
    flake8
    pytest
    pytest-cov
    tox

[flake8]
select =
  B,  # bugbear
  B9,  # bugbear opinionated
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  RST,  # rst docstring formatting
  T0,  # print
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    W503,  # W503 line break before binary operator
    E203,  # E203 whitespace before ':'

max-complexity = 10
max-line-length = 88

statistics = true
doctests = True
accept-encodings = utf-8

[tool:pytest]
addopts = --doctest-modules
