[metadata]
name = mailshake
version = 2.3
url = https://github.com/jpsca/mailshake
project_urls =
    Issue tracker = https://github.com/jpsca/mailshake/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0
license_file = LICENSE
description = Dramatically simplify sending email from your python app.
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
python_requires = >=3.6,<4.0
install_requires =
    html2text

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    flake8
    pytest
    pytest-cov
    smtpdfix

dev =
    black
    flake8
    pytest
    pytest-cov
    tox

[flake8]
select =
  # bugbear
  B,
  # bugbear opinionated
  B9,
  # mccabe, comprehensions, commas
  C,
  # pycodestyle errors
  E,
  # pyflakes
  F,
  # logging format
  G,
  # imports
  I,
  P,
  # quotes
  Q,
  # rst docstring formatting
  RST,
  # print
  T0,
  # mypy
  T4,
  # pycodestyle warnings
  W,

ignore =
    # W503 line break before binary operator
    W503,
    # E203 whitespace before ':'
    E203,

max-complexity = 10
max-line-length = 88

statistics = true
doctests = True
accept-encodings = utf-8

[tool:pytest]
addopts = --doctest-modules
